--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Enviar
                 </button>
                 <button type="button" id="res" onclick="location.reload()">
-                    <img src="./loading.png" alt="reset">
+                    <img src="./asstes/loading.png" alt="reset">
                 </button>
             </div>
         </form>
